# Traiding-Core

./: .gitattributes  AGENTS.md  CURRENT_STATUS.md  README.md  pyproject.toml
docs/: implementation_status.md  project_layout.md
docs/spec/: 01_architectural_roadmap.md  02_technical_roadmap.md  03_engineering_guardrails.md  04_trading_domain_model.md  05_core_contracts.md  06_trading_governance.md  07_interface_contracts_minimal_core_v1.md  08_implementation_packages_codex_workset.md  Implementation_Packages_Codex_workset_v0_1.md  Interface_Contracts_Minimal_Core_v1_v0_1.md  Trading_Domain_Model_v0_5-2.md  Trading_Governance_v0_1_final.md  core_contracts_canonical_core_model_v0_1.md  engineering_guardrails_core_v1_v0_8.md  index.md  roadmap_torgovogo_yadra_v1_7_arch_final_polish_fixed-1.md  technical_roadmap_trading_core_v0_9.md
src/trading_core/: __init__.py  architecture.py  observability.py
src/trading_core/context/: __init__.py  assembler.py  gate.py  policies.py  (+1 more)
tests/: README.md  __init__.py  test_acceptance_wave1g.py  test_acceptance_wave1g_minimal_core.py  test_close_routing_2e.py  test_context_gate_2b.py  test_domain_contracts.py  test_execution_package_e.py  test_fill_driven_spine_f.py  test_input_package_a.py  test_mtf_foundation_2a.py  test_next_stage_runtime_acceptance.py  test_order_builder_d1.py  test_pre_execution_guard_d2.py  test_reconciliation_loop_2d.py  test_risk_package_c.py  test_startup_reconciliation_g2.py  test_state_store_f1.py  test_state_store_g1.py  test_strategy_package_b.py  test_unknown_states_2c.py  test_wave3_observability.py
(+74 files in other folders)
